trying to learn ajax

--- a/Laboration_3/index.html
+++ b/Laboration_3/index.html
@@ -7,8 +7,7 @@
     </head>
     <body>
         <h1>Min fräscha trafikinformation</h1>
-        <div>
-            <p id="output"></p>
+        <div id="output">
         </div>
         <script src="JavaScript/myScript.js"></script>
     </body>
