--- a/Laboration_3/index.html
+++ b/Laboration_3/index.html
@@ -4,7 +4,7 @@
         <meta charset='utf-8'>
         <title>Laboration 3</title>
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
-        <link rel="stylesheet" href="/Style/main.css" />
+        <link rel="stylesheet" href="Style/main.css" />
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     </head>
     <body>
