--- a/Laboration_3/index.html
+++ b/Laboration_3/index.html
@@ -5,7 +5,6 @@
         <title>Laboration 3</title>
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
         <link rel="stylesheet" href="Style/main.css" />
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     </head>
     <body>
         <h1>Min fräscha trafikinformation</h1>
@@ -25,7 +24,9 @@
                 <th>Datum</th>
             </tr>
         </table>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+        <script src="JavaScript/lscache.min.js"></script>
         <script src="JavaScript/myScript.js"></script>
     </body>
 </html>
